Generate markdown for API doc from .d.ts

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,2 +1,4 @@
-<link crossorigin href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
-<link crossorigin href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed:700&display=swap" rel="stylesheet">
+<!-- <link crossorigin href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed:700&display=swap" rel="stylesheet"> -->
+<link crossorigin href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i,700,700i|IBM+Plex+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
+<!-- <link crossorigin href="https://fonts.googleapis.com/css?family=Fira+Code:400,700&display=swap" rel="stylesheet"> -->
+<link crossorigin rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@2/distr/fira_code.css">
