--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,3 +2,4 @@
 <link crossorigin href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i,700,700i|IBM+Plex+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
 <!-- <link crossorigin href="https://fonts.googleapis.com/css?family=Fira+Code:400,700&display=swap" rel="stylesheet"> -->
 <link crossorigin rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@2/distr/fira_code.css">
+<script src="https://kit.fontawesome.com/523e3eb8bb.js" crossorigin="anonymous"></script>
