--- a/assets/css/typescript_doc.scss
+++ b/assets/css/typescript_doc.scss
@@ -1,34 +1,10 @@
 ---
 ---
 @import "code_theme";
+@import "common";
 
 // Stylesheet for the typescript_doc layout.
 
-$monospace: 'Fira Code', 'IBM Plex Mono', monospace !default;
-$sans-serif: 'IBM Plex Sans', sans-serif !default;
-
-$body-font-size: 16px;
-$code-font-size: 13px;
-$h1-font-size: 36px;
-$h2-font-size: 28px;
-$h3-font-size: 22px;
-$h4-font-size: 18px;
-$h5-font-size: 16px;
-$subheading-font-size: 11px;
-
-
-$primary: #0066ce;
-$secondary: #999;
-$body-color: #5c5050;
-
-$card-border: #fff;
-$card-background: #fafafa;
-$body-color: #333;  // 5c5050
-
-$semantic-blue: #0066ce;
-$semantic-red: #e34850;
-$semantic-orange: #e68619;
-$semantic-green: #2d9d78;
 
 code {
     font-size: $code-font-size;
