--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -63,6 +63,12 @@ $global-transition : none;
     display: flex;
 }
 
+.cards.single-column {
+    flex-flow: column;
+    max-width: 75%;
+    margin: auto;
+}
+
 .card {
     display: flex;
     flex-flow: row;
@@ -77,7 +83,7 @@ $global-transition : none;
     border-radius: 5px;
     box-shadow: -2px 2px 8px 0 rgba(0,0,0,.23);
 }
-.card:hover {
+a .card:hover {
     background: #fafafa;
 }
 
@@ -93,7 +99,7 @@ $global-transition : none;
     color: #fff;
 }
 
-.card.primary:hover {
+a .card.primary:hover {
     background: $primary-color-dark;
     color: #fff;
 }
@@ -103,7 +109,7 @@ $global-transition : none;
     color: #fff;
 }
 
-.card.red:hover {
+a .card.red:hover {
     background: $red-700;
     color: #fff;
 }
@@ -114,6 +120,10 @@ $global-transition : none;
     --fa-secondary-color: #fff;
 }
 
+.card.wide {
+    box-shadow: none;
+    border-radius: 0;
+}
 
 .page__content .card h2 {
     font-size: $h2-font-size;
@@ -133,6 +143,13 @@ $global-transition : none;
     align-items: start;
     width: 100%;
     padding-left: 20px;
+}
+
+.card .block.align-top {
+    align-self: start;
+}
+.page__content .card .block.align-top h2 {
+    margin-top: 0;
 }
 
 .block h2 {
