Updated build system, content.

--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -1,6 +1,6 @@
 $monospace: 'Fira Code', 'IBM Plex Mono', monospace !default;
-$sans-serif: 'IBM Plex Sans', sans-serif !default;
-$sans-serif-condensed: 'IBM Plex Sans Condensed', sans-serif;
+$sans-serif: 'Source Sans Pro', sans-serif !default;
+$sans-serif-condensed: 'Source Sans Pro', sans-serif;
 
 $body-font-size: 16px;
 $code-font-size: 13px;
