--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,13 +2,6 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 @charset "utf-8";
-
-// $sans-serif: 'IBM Plex Sans', sans-serif !default;
-// $monospace: 'Fira Code', 'IBM Plex Mono', monospace !default;
-// $sans-serif-condensed: 'IBM Plex Sans Condensed', sans-serif;
-
-// $primary-color: #0066ce !default;
-
 $intro-transition  : none;
 $global-transition : none;
 
@@ -30,6 +23,20 @@ $global-transition : none;
 
     font-size: 1rem;
     color: #ccc;
+}
+
+.greedy-nav .visible-links a:before {
+    background: none;
+}
+
+.greedy-nav a:hover {
+    color: $primary
+}
+
+.masthead__menu-item {
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 20px;
 }
 
 .layout--splash .page__lead {
@@ -59,6 +66,15 @@ $global-transition : none;
     font-weight: 600;
 }
 
+
+h1.hero {
+    font-size: 48px;
+}
+
+h1.hero.xl {
+    font-size: 96px;
+}
+
 .cards {
     display: flex;
 }
@@ -67,9 +83,11 @@ $global-transition : none;
     flex-flow: column;
     max-width: 75%;
     margin: auto;
+    align-items: center;
 }
 
 .card {
+    position: relative;
     display: flex;
     flex-flow: row;
     align-items: center;
@@ -82,8 +100,35 @@ $global-transition : none;
     background: #fff;
     border-radius: 5px;
     box-shadow: -2px 2px 8px 0 rgba(0,0,0,.23);
+    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
+
+a .card {
+    transform: scale(.95, .95);
+}
+
+// This technique of using a ::after element is supposd to be faster (GPU accelerated)
+// a .card::after {
+//     content: "";
+//     border-radius: 5px;
+//     position: absolute;
+//     z-index: -1;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+//     opacity: 0;
+//     transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+// }
+
+// a .card:hover::after {
+//     opacity: 1;
+// }
+
 a .card:hover {
+    // transform: scale(1, 1);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);  // Don't need this if using ::after
     background: #fafafa;
 }
 
@@ -128,7 +173,7 @@ a .card.red:hover {
 .page__content .card h2 {
     font-size: $h2-font-size;
     border: none;
-    margin-top: 1em;
+    margin-top: 0;
 }
 
 .page__content a.btn {
@@ -141,8 +186,10 @@ a .card.red:hover {
     display: flex;
     flex-direction: column;
     align-items: start;
+    text-align: left;
     width: 100%;
     padding-left: 20px;
+    padding-right: 20px;
 }
 
 .card .block.align-top {
