--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,16 +1,16 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+
 @charset "utf-8";
-$intro-transition  : none;
-$global-transition : none;
+$intro-transition: none;
+$global-transition: none;
 
-
-@import "code_theme";
-@import "common";
+@import 'code_theme';
+@import 'common';
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
-@import "minimal-mistakes"; // main partials
+@import 'minimal-mistakes'; // main partials
 
 .site-title {
     font-family: $sans-serif-condensed;
@@ -30,7 +30,7 @@ $global-transition : none;
 }
 
 .greedy-nav a:hover {
-    color: $primary
+    color: $primary;
 }
 
 .masthead__menu-item {
@@ -56,7 +56,7 @@ $global-transition : none;
     font-weight: 900;
 
     font-size: 3rem;
-    line-height: .8;
+    line-height: 0.8;
     letter-spacing: -0.025ex;
 }
 
@@ -66,6 +66,24 @@ $global-transition : none;
     font-weight: 600;
 }
 
+.layout--wide .breadcrumbs {
+    max-width: 1280px;
+}
+
+.layout--wide #main {
+    max-width: 1280px;
+}
+
+.layout--wide .page {
+    width: 100%;
+    max-width: 1280px;
+    margin: auto;
+    padding-right: 0;
+}
+
+.layout--wide .page__content .cards.single-column a.btn {
+    max-width: 960px;
+}
 
 h1.hero {
     font-size: 48px;
@@ -75,13 +93,69 @@ h1.hero.xl {
     font-size: 96px;
 }
 
+section.fullwidth {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    margin-left: -50vw;
+
+    background: #fff;
+}
+
+section.fullwidth.hero {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+section.fullwidth.light-grey {
+    background: #f0f0f0;
+    color: #333;
+}
+
+section.fullwidth.dark-grey {
+    background: #333;
+    color: #f0f0f0;
+}
+
+section.fullwidth.primary {
+    background: $primary;
+    color: #fff;
+}
+
 .cards {
     display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.page__content .cards a.btn {
+    font-size: 1rem;
+    width: 25%; // 308px;
+    padding: 0;
+}
+
+@media (max-width: 1280px) {
+    .page__content .cards a.btn {
+        width: 33%; // 308px;
+    }
+}
+
+@media (max-width: 960px) {
+    .page__content .cards a.btn {
+        width: 50%; // 308px;
+    }
+}
+
+.page__content .cards.single-column a.btn {
+    width: 100%;
 }
 
 .cards.single-column {
     flex-flow: column;
-    max-width: 75%;
     margin: auto;
     align-items: center;
 }
@@ -93,18 +167,20 @@ h1.hero.xl {
     align-items: center;
     flex: 0 1 45%;
     margin: 1rem;
-    padding: 1.5rem;
+    padding: 20px;
+    min-width: 300px;
+    max-width: 960px;
 
     font-weight: normal;
 
     background: #fff;
     border-radius: 5px;
-    box-shadow: -2px 2px 8px 0 rgba(0,0,0,.23);
+    box-shadow: -2px 2px 8px 0 rgba(0, 0, 0, 0.23);
     transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 a .card {
-    transform: scale(.95, .95);
+    transform: scale(0.95, 0.95);
 }
 
 // This technique of using a ::after element is supposd to be faster (GPU accelerated)
@@ -128,14 +204,16 @@ a .card {
 
 a .card:hover {
     // transform: scale(1, 1);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);  // Don't need this if using ::after
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3); // Don't need this if using ::after
     background: #fafafa;
 }
 
-.card .fad {
-    // --fa-primary-opacity: 1.0; 
-    // --fa-secondary-opacity: 1.00; 
-    --fa-primary-color: #{$primary-color}; 
+.card .fad,
+.card svg[data-prefix='fad'] {
+    // --fa-primary-opacity: 1.0;
+    // --fa-secondary-opacity: 1.00;
+    color: #{$primary-color};
+    --fa-primary-color: #{$primary-color};
     --fa-secondary-color: #{$primary-color};
 }
 
@@ -159,8 +237,17 @@ a .card.red:hover {
     color: #fff;
 }
 
+.cards.single-column .card {
+    padding: 40px;
+}
 
-.card.primary .fad, .card.red .fad {
+.cards.single-column .card i + .block,
+.cards.single-column .card svg + .block {
+    margin-left: 30px;
+}
+
+.card.primary .fad,
+.card.red .fad {
     --fa-primary-color: #fff;
     --fa-secondary-color: #fff;
 }
@@ -168,12 +255,52 @@ a .card.red:hover {
 .card.wide {
     box-shadow: none;
     border-radius: 0;
+    background: transparent;
+    border: none;
+    max-width: 960px;
+    margin: auto;
+}
+
+.card.wide div {
+    width: 50%;
+}
+
+.card.wide div:first-of-type {
+    margin-right: 100px;
+}
+
+@media (max-width: 960px) {
+    .card.wide {
+        flex-flow: column;
+    }
+    .card.wide div {
+        width: 100%;
+    }
+    .card.wide div:first-of-type {
+        margin-right: 0;
+        margin-bottom: 100px;
+    }
+}
+
+.card.center {
+    padding: 10px;
+    flex-flow: column;
+}
+
+.page__content .card i + h2,
+.page__content .card svg + h2 {
+    margin: 0;
+    padding: 0;
+    margin-left: 20px;
 }
 
 .page__content .card h2 {
     font-size: $h2-font-size;
     border: none;
     margin-top: 0;
+    line-height: 1;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .page__content a.btn {
@@ -188,12 +315,22 @@ a .card.red:hover {
     align-items: start;
     text-align: left;
     width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-right: 20px;
+}
+
+.block.row {
+    flex-direction: row;
+    align-items: center;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 20px;
 }
 
 .card .block.align-top {
     align-self: start;
+}
+.card .block.align-center {
+    align-items: center;
 }
 .page__content .card .block.align-top h2 {
     margin-top: 0;
@@ -208,7 +345,7 @@ a .card.red:hover {
     color: $primary-color;
 }
 
-
-.card.primary .navigation, .card.red .navigation {
+.card.primary .navigation,
+.card.red .navigation {
     color: #fff;
 }
