--- a/assets/css/typescript_doc.scss
+++ b/assets/css/typescript_doc.scss
@@ -1,17 +1,16 @@
 ---
 ---
-@import "code_theme";
-@import "common";
+
+@import 'code_theme';
+@import 'common';
 
 // Stylesheet for the typescript_doc layout.
-
 
 code {
     font-size: $code-font-size;
 }
 
 h2 {
-
 }
 
 h2 em {
@@ -46,7 +45,7 @@ h3 {
     color: $body-color;
     // letter-spacing: .25px;
 
-    border-bottom: 1px solid #e7e7e7
+    border-bottom: 1px solid #e7e7e7;
 }
 
 h4 {
@@ -73,23 +72,24 @@ h3 strong {
     color: $primary;
 }
 
-body.layout--typescript_doc ul {
+body.layout--typescript-doc ul {
     line-height: 1.333;
     list-style: none;
     padding-left: 0;
 }
 
-body.layout--typescript_doc .page__content dd ul {
+body.layout--typescript-doc .page__content dd {
+    font-size: 1em;
+}
+
+body.layout--typescript-doc .page__content dd ul {
     list-style: square;
     margin-left: 10px;
     padding-left: 10px;
 }
 
-
-
-
-body.layout--typescript_doc .page__content p,
-body.layout--typescript_doc .page__content li {
+body.layout--typescript-doc .page__content p,
+body.layout--typescript-doc .page__content li {
     font-size: $body-font-size !important;
     line-height: 1.52;
 
@@ -98,38 +98,40 @@ body.layout--typescript_doc .page__content li {
     color: $body-color;
 }
 
-a, a:visited, a:hover {
+a,
+a:visited,
+a:hover {
     color: $primary;
     text-decoration: none;
 }
 
-body.layout--typescript_doc .page__content dt {
+body.layout--typescript-doc .page__content dt {
     font-family: $monospace;
     font-size: $code-font-size;
     color: $secondary;
     font-weight: normal;
 }
 
-body.layout--typescript_doc .page__content dt strong {
+body.layout--typescript-doc .page__content dt strong {
     color: $body-color;
 }
 
-body.layout--typescript_doc .page__content dt em {
+body.layout--typescript-doc .page__content dt em {
     color: $secondary;
 }
 
-body.layout--typescript_doc .page__content dd {
+body.layout--typescript-doc .page__content dd {
     font-size: $body-font-size;
     color: $body-color;
 
     margin-bottom: 20px;
 }
 
-body.layout--typescript_doc table {
+body.layout--typescript-doc table {
     font-size: 1em;
 }
 
-body.layout--typescript_doc td {
+body.layout--typescript-doc td {
     border-bottom-color: #ddd;
 }
 
@@ -137,30 +139,29 @@ dd div.highlight {
     margin-top: 1.5em;
 }
 
-
 .card {
     flex-flow: column;
     align-items: start;
-    
+
     font-size: $body-font-size;
-	margin-top: 30px;
-	margin-bottom: 40px;
-	overflow: hidden;
-	padding: 20px 17px;
-	border-radius: 4px;
-	border: 1px solid $card-border;
-	background-color: $card-background;
-	color: $body-color;
-	max-width: 820px;
-	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    margin-top: 30px;
+    margin-bottom: 40px;
+    overflow: hidden;
+    padding: 20px 17px;
+    border-radius: 4px;
+    border: 1px solid $card-border;
+    background-color: $card-background;
+    color: $body-color;
+    max-width: 820px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
-body.layout--typescript_doc .page__content .card p:nth-child(1) {
+body.layout--typescript-doc .page__content .card p:nth-child(1) {
     margin-top: 0;
 }
 
-.tsd-index-list ul, 
-ul.tsd-index-list  {
+.tsd-index-list ul,
+ul.tsd-index-list {
     column-width: 20ex;
     column-gap: 20px;
     padding: 0;
@@ -168,7 +169,7 @@ ul.tsd-index-list  {
     line-height: 1.333;
 }
 
-body.layout--typescript_doc  .tsd-index-list li {
+body.layout--typescript-doc .tsd-index-list li {
     font-family: $monospace;
     font-size: $code-font-size !important;
     margin: 0;
@@ -176,23 +177,23 @@ body.layout--typescript_doc  .tsd-index-list li {
     break-inside: avoid-column;
 }
 
-body.layout--typescript_doc  .tsd-index-list li a, 
-body.layout--typescript_doc  .tsd-index-list li a:visited {
+body.layout--typescript-doc .tsd-index-list li a,
+body.layout--typescript-doc .tsd-index-list li a:visited {
     text-decoration: none;
 }
 
-body.layout--typescript_doc  .tsd-index-list li a:hover,
-body.layout--typescript_doc  .tsd-index-list li a:active {
+body.layout--typescript-doc .tsd-index-list li a:hover,
+body.layout--typescript-doc .tsd-index-list li a:active {
     color: $primary;
 }
 
 /* Anchor icon */
-body.layout--typescript_doc .page__content h1 .header-link, 
-body.layout--typescript_doc .page__content h2 .header-link, 
-body.layout--typescript_doc .page__content h3 .header-link, 
-body.layout--typescript_doc .page__content h4 .header-link, 
-body.layout--typescript_doc .page__content h5 .header-link, 
-body.layout--typescript_doc .page__content h6 .header-link {
+body.layout--typescript-doc .page__content h1 .header-link,
+body.layout--typescript-doc .page__content h2 .header-link,
+body.layout--typescript-doc .page__content h3 .header-link,
+body.layout--typescript-doc .page__content h4 .header-link,
+body.layout--typescript-doc .page__content h5 .header-link,
+body.layout--typescript-doc .page__content h6 .header-link {
     font-size: 1em;
 }
 
@@ -205,7 +206,6 @@ body.layout--typescript_doc .page__content h6 .header-link {
     font-variant: normal;
     font-style: normal;
     color: $semantic-blue;
-
 
     height: 22px;
 
@@ -228,15 +228,14 @@ body.layout--typescript_doc .page__content h6 .header-link {
 }
 
 .red.modifier-tag {
-    color:  $semantic-red;
+    color: $semantic-red;
     border-color: $semantic-red;
 }
 
 .orange.modifier-tag {
-    color:  $semantic-orange;
+    color: $semantic-orange;
     border-color: $semantic-orange;
 }
-
 
 .tag-name {
     font-family: $sans-serif;
@@ -244,30 +243,34 @@ body.layout--typescript_doc .page__content h6 .header-link {
     font-weight: bold;
     color: $body-color;
     text-transform: capitalize;
-
 }
-body.layout--typescript_doc .page__content .notice--info h4,
-body.layout--typescript_doc .page__content .notice--warning h4,
-body.layout--typescript_doc .page__content .notice--danger h4 {
+body.layout--typescript-doc .page__content .notice--info h4,
+body.layout--typescript-doc .page__content .notice--warning h4,
+body.layout--typescript-doc .page__content .notice--danger h4 {
     font-size: $h4-font-size;
     letter-spacing: -0.5px;
     text-transform: uppercase;
 }
 
-body.layout--typescript_doc .page__content .notice--danger h4 {
+body.layout--typescript-doc .page__content .notice--danger h4 {
     color: $semantic-red;
 }
-
 
 .deprecated {
     text-decoration: line-through;
 }
 
-div.highlighter-rouge, figure.highlight {
+div.highlighter-rouge,
+figure.highlight {
     border-radius: 8px;
 }
 
-p>code, a>code, li>code, figcaption>code, td>code, dd>code{
+p > code,
+a > code,
+li > code,
+figcaption > code,
+td > code,
+dd > code {
     font-size: $code-font-size;
     border: 1px solid #ddd;
     background: #fefefe;
@@ -277,7 +280,6 @@ p>code, a>code, li>code, figcaption>code, td>code, dd>code{
     padding-bottom: 2px;
     padding-top: 2px;
 }
-
 
 @media (min-width: 80em) {
     .sidebar {
@@ -294,7 +296,7 @@ p>code, a>code, li>code, figcaption>code, td>code, dd>code{
 
 .highlight .c1,     // Single line comment
 .highlight .cm      // Multiline comment
-{
+ {
     font-style: italic;
 }
 
@@ -306,6 +308,6 @@ p>code, a>code, li>code, figcaption>code, td>code, dd>code{
 .highlight .kr,       // keywords reserved
 .highlight .kt,       // keywords type
 .highlight .kv       // keywords variable
-{
+ {
     font-weight: bold;
 }
