Add gitter chat integration

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -14,7 +14,13 @@
     href="https://cdn.jsdelivr.net/gh/tonsky/FiraCode@2/distr/fira_code.css"
 />
 
-<script
-    src="https://kit.fontawesome.com/523e3eb8bb.js"
-    crossorigin="anonymous"
-></script>
+<script src="https://kit.fontawesome.com/523e3eb8bb.js" crossorigin="anonymous"></script>
+
+<script>
+  ((window.gitter = {}).chat = {}).options = {
+    room: 'cortex-js/community',
+    activationElement: '.my-special-button',
+    targetElement: '.my-special-target-element'
+  };
+</script>
+<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
