--- a/src/_layouts/wide-live.html
+++ b/src/_layouts/wide-live.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-stylesheet: "/assets/css/wide.css"
+stylesheet: "/assets/css/wide-live.css"
 ---
 
 <section id="main" role="main">
