--- a/src/_sass/imports/live-code.scss
+++ b/src/_sass/imports/live-code.scss
@@ -1,3 +1,5 @@
+$tab-height: 36px;
+
 .live-code {
     display: flex;
     flex-flow: row;
@@ -31,6 +33,7 @@
 .tab label {
   position: absolute;
   width: 150px;
+  height: $tab-height;
   padding-top: 8px;
   padding-bottom: 6px;
   font-weight: 900;
@@ -42,11 +45,13 @@
   display: none;   
 }
 .content {
+  visibility: hidden;
   position: absolute;
-  top: 28px;
+  top: $tab-height;
   left: 0;
   right: 0;
   bottom: 0;
+  font-size: 14px;
 }
 [type=radio]:checked ~ label {
   background: white;
@@ -56,6 +61,7 @@
 }
 [type=radio]:checked ~ label ~ .content {
   z-index: 1;
+  visibility: visible;
 }
 
 
