feat(live-code): refactor and restyle live-code

--- a/src/_sass/imports/astra.scss
+++ b/src/_sass/imports/astra.scss
@@ -2,7 +2,7 @@ $intro-transition: none;
 $global-transition: none;
 $theme: "light" !default;
 
-@import 'code_theme';
+@import 'code-theme';
 @import 'common';
 
 $primary-color: #0066ce !default !global;
