--- a/src/_sass/imports/code-theme.scss
+++ b/src/_sass/imports/code-theme.scss
@@ -52,6 +52,11 @@ $base0d: #81a2be; // base0d
 $base0e: #b294bb;
 $base0f: #a3685a;
 
+$base-red: $base0c;
+$base-yellow: $base0a;
+$base-blue: $base0d;
+$base-green: $base0b;
+
 /*
 
     Name:       Base16 Tomorrow Dark
@@ -174,3 +179,33 @@ $base0f: #a3685a;
  {
     font-weight: bold;
 }
+
+
+.cm-s-tomorrow-night.CodeMirror { background: $base00; color: $base05; }
+.cm-s-tomorrow-night div.CodeMirror-selected { background: $base01; }
+.cm-s-tomorrow-night .CodeMirror-line::selection, .cm-s-tomorrow-night .CodeMirror-line > span::selection, .cm-s-tomorrow-night .CodeMirror-line > span > span::selection { background: rgba(45, 45, 45, 0.99); }
+.cm-s-tomorrow-night .CodeMirror-line::-moz-selection, .cm-s-tomorrow-night .CodeMirror-line > span::-moz-selection, .cm-s-tomorrow-night .CodeMirror-line > span > span::-moz-selection { background: rgba(45, 45, 45, 0.99); }
+.cm-s-tomorrow-night .CodeMirror-gutters { background: $base00; border-right: 0px; }
+.cm-s-tomorrow-night .CodeMirror-guttermarker { color: $base0c; }
+.cm-s-tomorrow-night .CodeMirror-guttermarker-subtle { color: $base03; }
+.cm-s-tomorrow-night .CodeMirror-linenumber { color: $base04; }
+.cm-s-tomorrow-night .CodeMirror-cursor { border-left: 1px solid $base0d; }
+
+.cm-s-tomorrow-night span.cm-comment { color: $base09; }
+.cm-s-tomorrow-night span.cm-atom { color: $base0e; }
+.cm-s-tomorrow-night span.cm-number { color: $base0e; }
+
+.cm-s-tomorrow-night span.cm-property, .cm-s-tomorrow-night span.cm-attribute { color: $base0b; }
+.cm-s-tomorrow-night span.cm-keyword { color: $base0c; }
+.cm-s-tomorrow-night span.cm-string { color: $base0a; }
+
+.cm-s-tomorrow-night span.cm-variable { color: $base0b; }
+.cm-s-tomorrow-night span.cm-variable-2 { color: $base0d; }
+.cm-s-tomorrow-night span.cm-def { color: $base09; }
+.cm-s-tomorrow-night span.cm-bracket { color: $base05; }
+.cm-s-tomorrow-night span.cm-tag { color: $base0c; }
+.cm-s-tomorrow-night span.cm-link { color: $base0e; }
+.cm-s-tomorrow-night span.cm-error { background: $base0c; color: $base03; }
+
+.cm-s-tomorrow-night .CodeMirror-activeline-background { background: $base02; }
+.cm-s-tomorrow-night .CodeMirror-matchingbracket { text-decoration: underline; color: white !important; }
