feat(mathlive-demo-video)

--- a/src/_sass/live-code.scss
+++ b/src/_sass/live-code.scss
@@ -154,8 +154,9 @@ $tab-width: 150px;
 .mathfield {
     display: block;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    padding: 4px;
+    border-radius: 8px;
+    padding: .5em;
+    font-size: 2rem;
     background: #fff;
 }
 
