--- a/src/_sass/imports/utilities.scss
+++ b/src/_sass/imports/utilities.scss
@@ -47,6 +47,14 @@
   margin-bottom: 3em !important;
 }
 
+.mt-lg {
+  margin-top: 2em !important;
+}
+
+.mt-xl {
+  margin-top: 3em !important;
+}
+
 
 
 .m-auto { 
