--- a/src/_sass/imports/common.scss
+++ b/src/_sass/imports/common.scss
@@ -1,4 +1,4 @@
-$monospace: 'Fira Code', 'IBM Plex Mono', monospace !default;
+$monospace: 'IBM Plex Mono', 'Fira Code', monospace !default;
 $sans-serif: 'Source Sans Pro', sans-serif !default;
 $sans-serif-condensed: 'Source Sans Pro', sans-serif !default;
 
