--- a/src/_sass/imports/minimal-mistakes/_notices.scss
+++ b/src/_sass/imports/minimal-mistakes/_notices.scss
@@ -15,11 +15,12 @@
   padding: 1em;
   color: $dark-gray;
   font-family: $global-font-family;
-  font-size: $type-size-6 !important;
+  font-size: $type-size-5 !important;
   text-indent: initial; /* override*/
   background-color: mix(#fff, $notice-color, 90%);
   border-radius: $border-radius;
   box-shadow: 0 1px 1px rgba($notice-color, 0.25);
+  width: 100%;
 
   h4 {
     margin-top: 0 !important; /* override*/
