--- a/src/_sass/imports/minimal-mistakes/_page.scss
+++ b/src/_sass/imports/minimal-mistakes/_page.scss
@@ -89,7 +89,7 @@ body {
   }
 
 	h1, h2, h3, h4, h5, h6 {
-		.header-link {
+		.permalink {
 			position: relative;
 			left: 0.5em;
 			opacity: 0;
@@ -100,7 +100,7 @@ body {
 			transition: opacity 0.2s ease-in-out 0.1s;
 		}
 
-		&:hover .header-link {
+		&:hover .permalink {
 			opacity: 1;
 		}
 	}
